[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1" # web 框架
jsonwebtoken = "9.3.1" # jwt, 用于生成和验证 token  
serde = { version = "1.0.217", features = ["derive"] } # 序列化和反序列化
serde_json = "1.0.138" # json 序列化
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] } # 数据库异步操作(SQLite)
tokio = { version = "1.43.0", features = ["full"] } # 异步运行时
tower-http = { version = "0.6.2", features = ["cors"] }
